--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./build",
     "target": "ES2019",
     "module": "es6",
+    "moduleResolution": "node",
     "jsx": "react-jsx",
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
